[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "dummyid"
requires-python = ">=3.13"
dependencies = [
    "aes-cipher==2.0.1",
    "aes-everywhere==1.2.10",
    "aes-pkcs5==1.0.3",
    "aes==1.2.0",
    "aescipher==6.0.0",
    "aesedb==0.1.6",
    "aesim-simba==2024.11.22",
    "aestate==1.1.0",
    "crypto>=1.4.1",
    "django==5.1.4",
    "matplotlib>=3.10.1",
    "numpy==2.1.3",
    "pycryptodome==3.21.0",
    "pycryptodomex==3.21.0",
    "react==4.3.0",
    "reactpy==1.1.0",
    "requests>=2.32.3",
    "websockets==14.1",
]
